# analytics_tasks

./: .gitignore  404.html  README.md  file_search.html  index.html  mkdocs.yml  pyproject.toml
assets/stylesheets/: extra.css
debug/: files_not_being_read.py  pickle_file_contents.py
dev/: analytics_tasks-0.1.0-py3-none-any.whl  analytics_tasks_utils-0.1.0-py3-none-any.whl
docs/: 1_vl.md  2_ao.md  3_fs.md  file_search.md  index.md
docs/debug/: bugfix.md
examples/: 1_fs_build.py  2_fs_query.py  3_fs_ml.py  ao_batch.py  ao_explore.py  fs_build.py  fs_fake_data_generator.py  fs_ml.py  fs_query.py  vl.py
search/: search_index.json
site/: 1_vl.html  2_ao.html  3_fs.html  404.html  bugfix.html  file_search.html  index.html
site/assets/stylesheets/: extra.css
site/debug/: bugfix.html
site/search/: search_index.js  search_index.json
src/analytics_tasks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/analytics_tasks/automate_office/: build_batch.py  build_explore.py
src/analytics_tasks/file_search/: build.py  functions.py  load_search_polars.py
src/analytics_tasks/utils/: fakedatagenerator.py  functions.py
src/analytics_tasks/visual_library/: build.py  copy_gallery_folder.py  visual_library_demo.py  visual_library_demo_old.py  visual_library_demo_v1.py
tests/: ao_batch.py  ao_batch_tests_v1.py  ao_explore.py  ao_explore_tests_v1.py  dev.py  fs_build.py  fs_ml.py  fs_query.py  fs_query_tests_v1.py  vl.py  vl_tests_v1.py
tests/____archive/: fs_build.py  fs_build_tests_v1.py  fs_build_tests_v2.py  fs_query.py  fs_query_tests_v2.py  vl_tests_v1.py
(+30 files in other folders)
