[project]
name = "analytics_tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "art>=6.5",
    "bs4>=0.0.2",
    "docx>=0.2.4",
    "ebooklib>=0.19",
    "extract-msg>=0.54.1",
    "faker>=37.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.1",
    "scikit-learn>=1.7.0",
]

authors = [
    {name = "AshutoshGaur", email = "emailashutoshgaur@gmail.com"},
    ]
keywords = ["automation", "analytics", "search", "file search", "indexing", "text mining", "presentations", "slides", "vba", "office automation", "powerpoint automation", "visualization", "data processing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics_tasks"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
pythonpath = "src"
